--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ before_install:
   - sudo apt-get -qq update
 
 install:
-  - pip install ansible==2.9.* molecule==3.* \
+  - pip install ansible molecule \
             molecule-docker testinfra \
             yamllint ansible-lint flake8
             docker
