molecule/default: add option to use DNS_SERVERS in molecule image

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -22,3 +22,4 @@ platforms:
     image: "${MOLECULE_DISTRO:-debian:stretch}"
     groups:
       - default_group
+    dns_servers: ["${DNS_SERVER1}", "${DNS_SERVER2}"]
