meta/main.yml: add role_name to force good role names
Basically wihtout "ansible-role", which is the
recommended practice now.

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,5 +1,6 @@
 ---
 galaxy_info:
+  role_name: epics
   author: Lucas Russo
   description: Ansible role to install EPICS base and extra packages
   company: Lucas Russo
