--- a/Vagrant/Vagrantfile
+++ b/Vagrant/Vagrantfile
@@ -8,6 +8,7 @@ hosts = {
   "ubuntu.trusty"  => "192.168.33.13",
   "ubuntu.xenial"  => "192.168.33.14",
   "centos.7"  => "192.168.33.15",
+  "centos.8"  => "192.168.33.16",
 }
 
 Vagrant.configure("2") do |config|
@@ -25,6 +26,8 @@ Vagrant.configure("2") do |config|
         machine.vm.box = "ubuntu/trusty64"
       elsif name.eql? "centos.7" then
         machine.vm.box = "centos/7"
+      elsif name.eql? "centos.8" then
+        machine.vm.box = "centos/8"
       end
       machine.vm.hostname = "%s" % name
       machine.vm.network :private_network, ip: ip
