various: add bypass support to CentOS 8
We don't really support it, but instead
bypass everything wihtout failing.

--- a/tasks/install-epics-from-source.yml
+++ b/tasks/install-epics-from-source.yml
@@ -2,3 +2,5 @@
 - name: Install EPICS base source
   fail:
     msg: "Installing EPICS from source is not current available. Use a supported distribution"
+  failed_when: false
+  changed_when: false
