--- a/meta/main.yml
+++ b/meta/main.yml
@@ -8,6 +8,14 @@ galaxy_info:
   min_ansible_version: 2.9
 
   platforms:
+    - name: EL
+      versions:
+        - 6
+        - 7
+        - 8
+    - name: Fedora
+      versions:
+        - all
     - name: Debian
       versions:
         - buster
