.github: add CentOS 7/8 to CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,8 @@ jobs:
         distro:
           - debian:buster
           - debian:stretch
+          - centos:7
+          - centos:8
 
     steps:
       - name: Check out the codebase
